# CodeCraft

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
apps/app1/: CMakeLists.txt
apps/app1/src/: main.cpp
codecraft/: codecraft.py
codecraft/apps/: Apps.py
codecraft/commands/: Apps.py  Build.py  Projects.py
codecraft/fileparsing/: CodeCraftFile.py
codecraft/projects/: Projects.py
core/: CMakeLists.txt
core/include/: ProjectName.h
core/src/: ProjectName.cpp
